	  sam34, or stm32}:  Beginning of support for nested, high priority
	  interrupts.  Lots more still needs to be done (2013-12-21).
	* arch/arm/src/armv7-m/up_exception.S and arch/arm/src/x/x_vectors.S:
	  where  x={kinetis, lm, lpc17xx, lpc43xx, sam34, or stm32}: completes
	  the basic implementation of nested, high priority interreupts.
	  Still untested and need documentation (2013-12-21).
	* configs/stm3210e-eval/buttons: Converted to use kconfig-frontends
	  tools (untested) (2013-12-22).
	* configs/Kconfig, configs/viewtool-stm32f107/include/board-stm32f103vct6.h,
	  and /board-stm32f107vct6.h:  The viewtools board can now be configured
	  to support either the STM32F103VCT6 or the STM32F107VCT6 (2013-12-22).
	* configs/Kconfig, README.txt, viewtool-stm32f107/highpri, Kconfig,
	  README.txt, and src/stm32_highpri.c:  This is the initial framework
	  for a test of the high priority, nested interrupt logic.  Still
	  incomplete and does not yet run (2013-12-22).
	* arch/arm/src/armv7-m/ram_vectors.h and up_ramvec_initialize.c: 
	  Correct alignment of the RAM vector table (2013-12-22).
	* Kconfig: Support configuration of interrupt controller debug output
	  (2013-12-22).
	* configs/viewtool-stm32f107/scripts:  Need to do some special things
	  in linking of the common vectors are used (2013-12-22).
	* arch/arm/include/*/irq*.h:  Add definition NR_VECTORS so that the RAM
	  vector logic can know how many vectors there are.  NR_IRQS is often
	  not equal to NR_VECTORS (2013-12-23).
	* arch/arm/src/*_vectors.S:  Standardize the name of the vector table
	  and the name of the common vector handling logic so that the MCU-
	  independent logic and work with these (2013-12-23).
	* configs/viewtool-stm32f107/scripts: Move the RAM vector tables to the
	  beginning of SRAM.  It seems to require this alignament.  Also, we
	  don't need different scripts for the CMNVECTOR case now that the vector
	  table has a common name.